syntax = "proto3";
package connect;
option go_package = "gim/pkg/protocol/pb/connectpb";

enum Command {
  UNKNOWN = 0; // 未知
  SIGN_IN = 1; // 设备登录请求
  HEARTBEAT = 2; // 心跳
  SUBSCRIBE_ROOM = 3; // 订阅房间

  USER_MESSAGE = 100; // 用户消息
  GROUP_MESSAGE = 101; // 群组消息

  ADD_FRIEND = 110; // 添加好友请求
  AGREE_ADD_FRIEND = 111; // 同意添加好友

  UPDATE_GROUP = 120; // 更新群组
  ADD_GROUP_MEMBERS = 121; // 添加群组成员
  REMOVE_GROUP_MEMBER = 122; // 移除群组成员
}

// 消息
message Message {
  string request_id = 1; // 请求id
  Command command = 2; // 指令
  bytes content = 3; // 数据
  uint64 seq = 4; // 消息序列号
  int64 created_at = 5; // 消息时间戳
  uint64 room_id = 6; // 房间ID

  int32 code = 100; // 错误码
  string message = 101; // 错误信息
}

// 设备登录,package_type:1
message SignInRequest {
  uint64 device_id = 1; // 设备id
  uint64 user_id = 2; // 用户id
  string token = 3; // 秘钥
}

// 订阅房间请求
message SubscribeRoomRequest {
  uint64 room_id = 1; // 房间ID，如果为0，取消房间订阅
}
